<resources>
    <string name="app_name">HiveSGC</string>
    <string name="directorio_fotos">SGC_images</string>
    <string name="inicio">Inicio</string>
    <string name="fin">Fin</string>
    <string name="prefijo">Prefijo</string>
    <string name="especiales">Especiales</string>
    <string name="normales">Normales</string>
    <string name="tipo">Tipo</string>
    <string name="nombre_coleccion">Nombre de la colección</string>
    <string name="nombre">Nombre</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar">Agregar</string>
</resources>
