<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.coleccionNuevaActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/corner_background"
            android:elevation="15dp"
            android:padding="15dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout4"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:text="@string/agregar" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout4"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:text="@string/cancelar" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/editNombre"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:ems="10"
                android:hint="@string/nombre_coleccion"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/spTipo"
                android:text="@string/tipo"/>

            <Spinner
                android:id="@+id/spTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/editNombre"
                android:layout_alignStart="@id/editNombre"
                android:layout_below="@id/editNombre"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkBox"
                android:layout_marginTop="15dp"
                android:text="@string/normales" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="15dp"
                android:layout_alignParentStart="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inicio"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="15dp"
                android:layout_alignParentEnd="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editFin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fin"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout"
                android:layout_marginTop="15dp"
                android:text="@string/especiales" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/editText2"
                android:layout_marginTop="15dp"
                android:text="@string/prefijo" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_alignStart="@+id/spTipo"
                android:layout_alignEnd="@+id/spTipo"
                android:ems="10"
                android:hint="@string/prefijo"
                android:inputType="textPersonName"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="15dp"
                android:layout_alignParentStart="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editInicioEsp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inicio"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="15dp"
                android:layout_alignParentEnd="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editFinEsp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fin"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spTipo"
                android:layout_marginTop="15dp"
                android:text="Tiene tapa dura"/>

        </RelativeLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>